# i18n-TranslationAutomation

./: .gitignore  CONTEXT.md  README.es.md  README.md  config.yaml  pyproject.toml
data/: messages.json
docs/: guia.md  guide.md
src/i18n_manager/: __init__.py  cli.py  config.py  storage.py  translator.py
src/i18n_manager/providers/: __init__.py  azure_provider.py  base.py  deepl_provider.py
tests/: test_cli.py  test_storage.py  test_translator.py
tests/fixtures/: sample_import.csv  sample_import.json
